--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,58 @@
     margin: 0;
     padding: 0;
 }
+header ul {
+    list-style-type: none;
+}
+a {
+    text-decoration: none;
+    color: #fff;
+    transition: all .6s ease;
+}
 body {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 16px;
+}
+/* ---HEADER----------------------------- */
+.header {
+    background: #000;
+    color: #fff;
+    padding: 29px 0px;
+    font-weight: 500;
+}
+.container {
+    max-width: 1161px;
+    margin: 0 auto;
+}
+.header__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.header__logo {
+}
+.logo {
+}
+.nav {
+    display: flex;
+    align-items: center;
+}
+.navigation {
+    
+}
+.navigation_list {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 63px;
+    width: 400px;
+}
+.navigation_list a:hover {
+    color: #fd8958;
+}
+.header__designed {
+}
+.designed {
+}
+.designed__label {
 }
