--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 .header {
     background: #000;
     color: #fff;
-    padding: 13px 0px;
+    padding: 15px 0px;
     font-weight: 500;
 }
 .container {
@@ -33,9 +33,23 @@ body {
     justify-content: space-between;
     align-items: center;
 }
-.header__logo {
-}
 .logo {
+    width: 82px;
+    border: 1px solid #fff;
+    border-radius: 2px;
+    text-align: center;
+}
+.logo .logo__title {
+    font-size: 20px;
+    font-weight: 400;
+}
+.logo .logo__title span {
+    position: relative;
+}
+.logo .logo__title span img {
+    position: absolute;
+    bottom: 5px;
+    right: 57px;
 }
 .nav {
     display: flex;
@@ -48,7 +62,7 @@ body {
     display: flex;
     justify-content: space-between;
     padding-left: 63px;
-    width: 473px;
+    width: 471px;
 }
 .navigation_list a:hover {
     color: #fd8958;
