--- a/css/style.css
+++ b/css/style.css
@@ -17,16 +17,17 @@ body {
     font-weight: 400;
     font-size: 16px;
 }
+.container {
+    max-width: 1161px;
+    padding: 0 30px;
+    margin: 0 auto;
+}
 /* ---HEADER----------------------------- */
 .header {
     background: #000;
     color: #fff;
     padding: 15px 0px;
     font-weight: 500;
-}
-.container {
-    max-width: 1161px;
-    margin: 0 auto;
 }
 .header__content {
     display: flex;
