--- a/css/style.css
+++ b/css/style.css
@@ -56,9 +56,7 @@ body {
     display: flex;
     align-items: center;
 }
-.navigation {
-    
-}
+
 .navigation_list {
     display: flex;
     justify-content: space-between;
@@ -68,9 +66,34 @@ body {
 .navigation_list a:hover {
     color: #fd8958;
 }
-.header__designed {
-}
+
 .designed {
 }
 .designed__label {
+}
+.burger_menu_block {
+    width: 18px;
+}
+.header__burger_menu {
+    display: none;
+}
+.burger_menu_block div {
+    width: 100%;
+    height: 2px;
+    border-radius: 2px;
+    background: #fff;
+}
+.burger_menu_block div:not(:last-child) {
+    margin-bottom: 2px;
+}
+@media (max-width: 900px) {
+    .navigation {
+        display: none;
+    }
+    .header__designed {
+        display: none;
+    }
+    .header__burger_menu {
+        display: block;
+    }
 }
