--- a/css/style.css
+++ b/css/style.css
@@ -22,12 +22,34 @@ body {
     padding: 0 30px;
     margin: 0 auto;
 }
+button {
+    text-transform: uppercase;
+    background: #fc8d5d;
+    border: none;
+    border-radius: 25px;
+    text-align: center;
+    padding: 16px 30px;
+    margin-top: 76px;
+    line-height: 140%;
+    color: #fff;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all .6s ease;
+}
+button:hover {
+    background: #FFEE2E;
+}
 /* ---HEADER----------------------------- */
 .header {
     background: #000;
     color: #fff;
     padding: 15px 0px;
     font-weight: 500;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 100;
 }
 .header__content {
     display: flex;
@@ -96,4 +118,45 @@ body {
     .header__burger_menu {
         display: block;
     }
+}
+/* ---WATCH--ONLINE----------- */
+.watch_online {
+}
+.watch_online__content {
+    background: url(../img/watch_online/1.jpg);
+    padding: 92px 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.watch_online__block {
+    display: flex;
+    justify-content: flex-end;
+}
+.watch_online__circle {
+    width: 465px;
+    height: 465px;
+    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
+    text-align: center;
+    border-radius: 50%;
+    margin-right: 108px;
+}
+.circle {
+}
+.circle__content {
+    position: relative;
+    top: 66px;
+    left: 82px;
+}
+.circle__title {
+    font-weight: 700;
+    font-size: 106.496px;
+    line-height: 75%;
+    text-transform: uppercase;
+    color: #fff;  
+}
+.circle__title span {
+    color: #FFEE2E;
+}
+.circle__button {
 }
